Fix spacing, images, etc.

--- a/_sass/layout/_early_intervention.scss
+++ b/_sass/layout/_early_intervention.scss
@@ -38,5 +38,6 @@
   }
   .intervention-image{
    margin-top: -4rem;
+    margin-bottom: -16rem;
   }
 }
